src/test/ui/const-generics/const-expression-parameter.stderr
error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:14:11
   |
LL |     foo::<1 + 2>();
   |           ^^^^^
help: surround this const argument in braces
   |
LL |     foo::<{ 1 + 2 }>();
   |           ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:16:11
   |
LL |     foo::<1 + 2, 3 + 4>();
   |           ^^^^^
help: surround this const argument in braces
   |
LL |     foo::<{ 1 + 2 }, 3 + 4>();
   |           ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:16:18
   |
LL |     foo::<1 + 2, 3 + 4>();
   |                  ^^^^^
help: surround this const argument in braces
   |
LL |     foo::<1 + 2, { 3 + 4 }>();
   |                  ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:23:11
   |
LL |     baz::<1 + 2, 3 + 4>();
   |           ^^^^^
help: surround this const argument in braces
   |
LL |     baz::<{ 1 + 2 }, 3 + 4>();
   |           ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:23:18
   |
LL |     baz::<1 + 2, 3 + 4>();
   |                  ^^^^^
help: surround this const argument in braces
   |
LL |     baz::<1 + 2, { 3 + 4 }>();
   |                  ^       ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:29:11
   |
LL |     bat::<(1, 2, 3)>();
   |           ^^^^^^^^^
help: surround this const argument in braces
   |
LL |     bat::<{ (1, 2, 3) }>();
   |           ^           ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:30:11
   |
LL |     bat::<(1, 2)>();
   |           ^^^^^^
help: surround this const argument in braces
   |
LL |     bat::<{ (1, 2) }>();
   |           ^        ^

error: complex const arguments must be surrounded by braces
  --> $DIR/const-expression-parameter.rs:35:11
   |
LL |     bar::<!false>();
   |           ^^^^^^
help: surround this const argument in braces
   |
LL |     bar::<{ !false }>();
   |           ^        ^

error: expected one of `,` or `>`, found `<`
  --> $DIR/const-expression-parameter.rs:39:14
   |
LL |     bar::< 3 < 4 >();
   |              ^ expected one of `,` or `>` here

warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-expression-parameter.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0107]: wrong number of const arguments: expected 1, found 2
  --> $DIR/const-expression-parameter.rs:16:18
   |
LL |     foo::<1 + 2, 3 + 4>();
   |                  ^^^^^ unexpected const argument

error[E0308]: mismatched types
  --> $DIR/const-expression-parameter.rs:27:17
   |
LL |     baz::< -1 , "2" >();
   |                 ^^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/const-expression-parameter.rs:30:11
   |
LL |     bat::<(1, 2)>();
   |           ^^^^^^ expected a tuple with 3 elements, found one with 2 elements
   |
   = note: expected type `(i32, i32, i32)`
              found type `(i32, i32)`

error: aborting due to 12 previous errors

Some errors have detailed explanations: E0107, E0308.
For more information about an error, try `rustc --explain E0107`.
